--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,8 +1,15 @@
 /* reset */
-body {
-    padding: 0;
+* {
+    box-sizing: border-box;
+}
+
+/* Base HTML & Body */
+html, body {
+    height: 100%;
     margin: 0;
-    box-sizing: unset;
+    padding: 0;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 body {
@@ -10,41 +17,51 @@ body {
     line-height: 1.5;
     font-family: "Lato", sans-serif;
     background-color: #f0f0f0;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
+/* Header & Navigation */
 header {
-    top: 0;
     background-color: black;
     color: white;
-    /* height: 50px; */
     width: 100%;
     position: fixed;
-    z-index: 1;
-    display: block;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 nav {
-    overflow: hidden;
     width: 100%;
-    box-sizing: inherit;
+    max-width: 2000px;
+    margin: 0 auto;
+    padding: 8px 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 nav a {
     color: inherit;
     text-decoration: none;
     font-size: 15px;
+    padding: 8px 16px;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 nav a:hover {
-    color: rgba(255, 255, 255, 0.812);
-    text-decoration: solid;
+    color: rgba(3, 226, 255, 0.812);
 }
 
+#logo-senai {
+    font-size: 1.7em;
+    font-weight: bold;
+}
 
+/* Typography */
 h1,
 h2,
 h3,
@@ -60,53 +77,31 @@ h2 {
     font-size: 30px;
 }
 
-
-
-.button-vls {
+/* General Layout & Utility Classes */
+.button-ipi {
     text-align: center;
     white-space: normal;
 }
 
-.nav-items-vls {
-    display: flex;
-    padding: 8px 16px;
-    width: auto;
-    border: none;
-    /* text-align-last: center; */
-    /* outline: 0; */
-    flex-wrap: wrap;
-    flex-direction: row;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-}
-
-.nav-card-vls {
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
-        0 2px 10px 0 rgba(0, 0, 0, 0.12);
-}
-
-
-.content-vls {
+.content-ipi {
     margin-left: auto;
     margin-right: auto;
-    max-width: 2000px;
-    margin-top: 46px
+    max-width: 100%;
+    flex-grow: 1;
+    margin-top: 50px;
 }
 
-.container-vls {
+.container-ipi {
     padding: 0.01em 16px;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
-
-.to-right-vls {
-    float: right !important;
-}
-
-.to-left-vls {
-    float: left !important;
+.to-right-ipi, .to-left-ipi {
+    float: none !important;
 }
 
 .padding-large {
@@ -115,22 +110,22 @@ h2 {
 
 .padding-64 {
     padding-top: 64px !important;
-    padding-bottom: 64px !important
+    padding-bottom: 64px !important;
 }
 
-.wide-vls {
+.wide-ipi {
     letter-spacing: 4px;
 }
 
-.opacity-vls {
+.opacity-ipi {
     opacity: 0.60;
 }
 
-.justify-vls {
+.justify-ipi {
     text-align: justify;
 }
 
-.center-vls {
+.center-ipi {
     text-align: center;
 }
 
@@ -139,19 +134,17 @@ h2 {
     padding-bottom: 32px !important;
 }
 
-
-
-#inicio {
-    margin-top: 50px;
-}
-
-.black-ground {
+/* Mural Section */
+#mural {
+    padding-left: 200px;
+    padding-right: 200px;
+    width: 100%;
     background-color: black;
     color: white;
 }
 
-
-.btn-card-vls {
+/* Card Button */
+.btn-card-ipi {
     background-color: black;
     color: #fff;
     padding: 8px 16px;
@@ -160,56 +153,128 @@ h2 {
     cursor: pointer;
     font-weight: bold;
     text-decoration: none;
+    display: inline-block;
+    margin-top: 10px;
 }
 
-.btn-card-vls:hover {
-    background-color: inherit;
-    color: inherit;
+.btn-card-ipi:hover {
+    background-color: rgba(3, 226, 255, 0.812);
+    color: black;
+    opacity: 0.8;
 }
 
-#logo {
-    font-size: 1.7em;
-}
-
+/* Section Styling */
 section {
-    max-width: 800px;
-    box-sizing: inherit;
+    width: 100%;
+    padding: 20px;
+    margin: 0 auto;
 }
 
-section p.justify-vls {
+section p.justify-ipi {
     width: auto;
     margin: auto;
-    padding: 10px 100px 10px 100px;
+    padding: 10px;
 }
 
-section.cardBox-vls {
+section.cardBox-ipi {
     background-color: white;
     color: black;
 }
 
-.italic-vls{
-    text-orientation:sideways-right;
+.italic-ipi {
+    font-style: italic;
 }
 
+/* Footer */
 footer {
-    margin-top: 0;
     background-color: gainsboro;
-    font-size: 10px;
-    /* position: absolute; */
-    /* position: fixed; */
-    /* min-height: 100vh; */
-    /* bottom: 0; */
     width: 100%;
-    height: 2.5rem;
+    min-height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: auto;
+    text-align: center;
 }
 
-footer p{
-    padding-top: 15px;
+.footer-copyright {
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #333;
+    text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
-footer.content-vls {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 2000px;
-    margin-top: 0px;
+/* Media Queries */
+
+/* Tablets and smaller screens */
+@media (max-width: 768px) {
+    h2 {
+        font-size: 24px;
+    }
+
+    .wide-ipi {
+        letter-spacing: 2px;
+    }
+
+    section p.justify-ipi {
+        padding: 10px 20px;
+    }
+
+    .padding-large {
+        padding: 8px 16px !important;
+    }
+
+    .padding-64 {
+        padding-top: 32px !important;
+        padding-bottom: 32px !important;
+    }
+
+    #logo-senai {
+        font-size: 1.5em;
+    }
+
+    footer {
+        min-height: 30vh;
+    }
+
+    .footer-copyright {
+        font-size: 1em;
+    }
+}
+
+/* Mobile phones */
+@media (max-width: 480px) {
+    nav {
+        flex-direction: column;
+        padding: 5px 10px;
+    }
+
+    nav a {
+        width: 100%;
+        text-align: center;
+        padding: 10px 0;
+    }
+
+    #logo-senai {
+        margin-bottom: 10px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
+    .wide-ipi {
+        letter-spacing: 1px;
+    }
+
+    .padding-32 {
+        padding-top: 20px !important;
+        padding-bottom: 20px !important;
+    }
+
+    footer {
+        min-height: 20vh;
+    }
 }
